[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bayesacmg"
version = "0.1.0"
description = """Bayesian ACMG/AMP variant classifier implementing ACGS \
Best Practice Guidelines 2024 v1.2 (Durkie et al.) and ClinGen SVI 2024 \
recommendations. Implements all 28 ACMG/AMP criteria with: PM2 at Supporting \
weight (ClinGen SVI 2024), AlphaMissense as primary PP3/BP4 predictor, \
ClinGen SVI splicing subgroup framework (Walker et al. 2023), ACGS 2024 §6 \
mito-specific rules, VCEP gene-specific override lookup, novel ClinGen SVI \
2024 evidence combinations (PVS1+PM2_Supporting=LP), and Bayesian \
Dirichlet-Multinomial model with calibrated 95% credible intervals."""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "ClaritySeq", email = "osaronosakhare@gmail.com" }]
keywords = [
    "ACMG", "variant classification", "genomics", "Bayesian",
    "ClinGen", "ACGS", "pathogenicity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pymc>=5.10",
    "arviz>=0.18",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13",
    "httpx>=0.27",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
bayesacmg = "bayesacmg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bayesacmg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=bayesacmg --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
